--- a/image_cleaner_secret.yaml
+++ b/image_cleaner_secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: image-cleaner-secret
 data:
-  username: bmlnYXNhMTI=
-  password: bmlnYXNhMTI=
+  username: <username>
+  password: <password>
