--- a/.github/workflows/build-push-docker-image.yml
+++ b/.github/workflows/build-push-docker-image.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{ secrets.DEV_IMAGE_CLEANER_AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.DEV_IMAGE_CLEANER_AWS_ECR_REPO_NAME }}
         aws-region: ap-northeast-1
 
     - name: Login to Amazon ECR
@@ -31,7 +31,7 @@ jobs:
       id: build-push-app-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPO_NAME }}
+        ECR_REPOSITORY: ${{ secrets.DEV_IMAGE_CLEANER_AWS_SECRET_ACCESS_KEY }}
         IMAGE_TAG: ${{ steps.tag_version.outputs.tag }}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
