--- a/.github/workflows/build-push-docker-image.yml
+++ b/.github/workflows/build-push-docker-image.yml
@@ -34,5 +34,7 @@ jobs:
         ECR_REPOSITORY: ${{ secrets.DEV_IMAGE_CLEANER_AWS_ECR_REPO_NAME }}
         IMAGE_TAG: ${{ steps.tag_version.outputs.tag }}
       run: |
+        echo ${{ secrets.DEV_IMAGE_CLEANER_AWS_ECR_REPO_NAME }}
+        echo $ECR_REPOSITORY
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
