--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -10,8 +10,8 @@ repositories:
           version: <= 0.1
           age: <= 10d
       credentials:
-        username: username
-        password: password
+        access_key_id: access_key_id
+        secret_access_key: secret_access_key
   - name: Docker Hub - examp2
     repository_type: DOCKER_HUB
     options:
